<resources>
    <string name="app_name">Kalkulator PKS</string>
    <string name="title_activity_main_menu">MainActivity</string>
    <string name="title_home">Beranda</string>
    <string name="title_calculate">Hitung</string>
    <string name="title_about">Berkas</string>
    <string name="app_launch_btn">Mulai</string>
    <string name="app_launch_title" translatable="false">Perhitungan Singkat PKS</string>
    <string name="text_home">Simple Text</string>
    <string name="text_about_title">Tentang Kami</string>
    <string name="text_about_inner">
            Aplikasi ini di rancang oleh mahasiswa sekolah tinggi ilmu pertanian agrobisnis perkebunan () dan di bimbing oleh :\n
            Zulham Effendi. ST., M.Sc.Eng\n
            Zakwan. STP.,MP.,M.Si\n
    </string>
    <string name="text_about_member">
            Disusun oleh :\n
            Mhd Dwi Indrawan - 1702017 \n
            M Rizal Fikri - 1702020 \n
            M Monang ritonga - 1702019 \n
            Ridha pertiwi - 1702030 \n
            Anisa Anggria Ginting - 1702082</string>
    <string name="text_cal_logo">Pilihan Kalkulasi Cepat</string>
    <string name="cal_01">Material balance</string>
    <string name="cal_02">Perhitungan mutu</string>
    <string name="cal_03">Losses pabrik</string>
    <string name="cal_04">Perhitungan rendemen</string>
    <string name="cal_05">Overall Equimpment Effectiveness</string>
    <string name="cal01_beratTBS_std">Berat TBS (KG)</string>
    <string name="kg">KG</string>
    <string name="cal_01_simpan_prsn">Simpan Persen</string>
    <string name="hitung">Hitung</string>
    <string name="cal_01_manual_btn">Manual</string>
    <string name="cal_01_std_btn">Standar</string>
    <string name="cal_01_title_top">Persentase</string>
    <string name="hasil">Hasil</string>
    <string name="ALB">ALB</string>
    <string name="Dobi">Dobi</string>
    <string name="kadar_air">Kadar AIr</string>
    <string name="kadar_kotoran">Kadar kotoran</string>
    <string name="mutu_cpo">Mutu pada CPO</string>
    <string name="mutu_inti">Mutu pada inti</string>
    <string name="alb_cpo">ALB pada CPO</string>
    <string name="title_activity_hitung04">Hitung04</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="cari">Cari</string>
</resources>