<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.itcteam.kalkulatorpks.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.itcteam.kalkulatorpks.ui.calculate.DashboardFragment"
        android:label="@string/title_calculate"
        tools:layout="@layout/fragment_calculate" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.itcteam.kalkulatorpks.ui.about.BerkasPreferenceFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about" />
</navigation>