<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="10dp"
    tools:context=".ui.calculate.task.Hitung01">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cal_01_title_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/cal_01_title_top"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cal_01_std_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:drawableTop="@drawable/ic_baseline_save_24"
                    android:text="@string/cal_01_std_btn"
                    android:textColor="@android:color/black" />

                <Button
                    android:id="@+id/cal_01_manual_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:drawableTop="@drawable/ic_baseline_edit_24"
                    android:text="@string/cal_01_manual_btn"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/fragment_cal01"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </androidx.fragment.app.FragmentContainerView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>