<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.denzcoskun.imageslider.ImageSlider
                android:id="@+id/img_sawit"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginBottom="10dp"
                app:iss_auto_cycle="true"
                app:iss_delay="0"
                app:iss_period="1000"
                app:iss_title_background="@android:color/transparent"
                app:layout_constraintBottom_toTopOf="@+id/text_home"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </com.denzcoskun.imageslider.ImageSlider>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/home_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="Kalkulator PKS"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/text_home"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/text_home"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/black"
                    android:textSize="17sp"
                    app:layout_constraintBottom_toTopOf="@id/home_linear_info"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/home_title" />

                <LinearLayout
                    android:id="@+id/home_linear_info"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="vertical"
                    android:paddingBottom="100dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_home">

                    <TextView
                        android:id="@+id/text_about_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="20dp"
                        android:lineSpacingExtra="2sp"
                        android:text="@string/text_about_title"
                        android:textColor="@color/design_default_color_on_secondary"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:typeface="normal" />

                    <TextView
                        android:id="@+id/text_about_inner"
                        android:layout_width="match_parent"
                        android:layout_height="96dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="40dp"
                        android:text="@string/text_about_inner"
                        android:textAlignment="textStart"
                        android:textColor="@color/design_default_color_on_secondary"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/text_about_member"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/text_about_member"
                        android:textColor="@android:color/black"
                        android:textSize="17sp" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>